infrastructure/base/addons/nginx-ingress-controller/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-inbound
  namespace: ingress-nginx
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 10254
